--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -47,8 +47,7 @@
       <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
         <div class="flex items-center justify-between px-6 py-4">
           <h1 class="text-3xl font-semibold text-gray-800">Portafolio</h1>
-          <a href="admin_portafolio.html" class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200 mr-2">Administrar</a>
-          <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
+          <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">🏠 Inicio</button>
         </div>
       </header>
 
