--- a/index.html
+++ b/index.html
@@ -68,20 +68,24 @@
         </p>
       </div>
       <!-- Botones -->
-      <div class="flex flex-row space-x-2 mt-3 sm:mt-0 w-full sm:w-auto justify-center sm:justify-end" 
-           style="white-space: nowrap; min-width: 100px; margin-top: 1rem;">
+      <div class="flex flex-row space-x-2 mt-3 sm:mt-0 w-full sm:w-auto justify-center sm:justify-end"
+          style="white-space: nowrap; min-width: 100px; margin-top: 0.7rem;">
 
-        <button onclick="window.location.href='Paginas/inicioSesion.html'" 
-          class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200">
-          Iniciar sesión
+      <button onclick="window.location.href='Paginas/inicioSesion.html'"
+        class="px-2 py-0 sm:px-3 sm:py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200">
+        Iniciar sesión
+      </button>
+
+      <button onclick="window.location.href='Paginas/registro.html'"
+        class="px-2 py-0 sm:px-3 sm:py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">
+        Registrarse
+      </button>
+
+
+        <button id="menu-toggle"
+          class="md:hidden p-1 sm:p-2 w-[2.3rem] text-white bg-gray-800 transition-colors duration-300">
+          &#9776;
         </button>
-        <button onclick="window.location.href='Paginas/registro.html'" 
-          class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">
-          Registrarse
-        </button>
-    <button id="menu-toggle" class="md:hidden p-2 w-[2.3rem] text-white bg-gray-800 transition-colors duration-300">
-      &#9776;
-    </button>
 
       </div>
     </div>
@@ -89,40 +93,31 @@
 </header>
 
   <!-- Navegación pestañas -->
-  <nav class="tabs px-6 mt-2 text-base md:text-lg flex flex-col sm:flex-row sm:gap-3 gap-1">
+  <nav class="tabs px-6 mt-[0.1rem] mb-[0.1rem] text-base md:text-lg flex flex-col sm:flex-row sm:gap-3 gap-1">
     <button class="active" data-tab="obra-negra">Obra Negra</button>
     <button data-tab="obra-blanca">Obra Blanca</button>
     <button data-tab="mantenimiento">Mantenimiento</button>
   </nav>
 
      <main 
-      class="flex-1 w-full flex flex-col items-center justify-start overflow-y-auto px-6 pb-6 rounded-2xl shadow-lg" 
-      style="background-color: #e0f2f1; margin-top: -0.5rem; border-radius: 1.5rem;">
+      class="flex-1 w-full flex flex-col items-center justify-start overflow-y-auto pl-[0.4rem] pr-[0.4rem] pb-6 rounded-2xl shadow-lg" 
+      style="background-color: #e0f2f1; border-radius: 1.5rem;">
 
       <!-- Secciones ocultas/visibles según pestaña -->
       <section id="obra-negra" class="tab-content w-full">
-        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-          Obra Negra
-        </h2>
         <div id="obra-negra-section"
-            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mt-4">
         </div>
       </section>
 
       <section id="obra-blanca" class="tab-content hidden w-full">
-        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-          Obra Blanca
-        </h2>
         <div id="obra-blanca-section" 
-            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mt-4">
       </section>
 
       <section id="mantenimiento" class="tab-content hidden w-full">
-        <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
-          Mantenimiento
-        </h2>
         <div id="mantenimiento-section" 
-            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mt-4">
       </section>
       </main>
     </div>
