Alinaecion del header portafolio y simulador

--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -45,21 +45,21 @@
     <div class="flex-1 flex flex-col overflow-hidden">
       <!-- Header -->
       <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
-        <div class="flex items-center justify-between px-6 py-4">
+        <div class="flex items-center justify-between px-2 py-3">
           <h1 class="text-3xl font-semibold text-gray-800">Portafolio</h1>
           <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">🏠 Inicio</button>
         </div>
       </header>
 
       <!-- Main -->
-      <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
+      <main class="flex-1 overflow-y-auto p-2 bg-gray-100">
         <div class="mb-6">
           <h2 class="text-2xl font-semibold text-gray-800">Nuestros Proyectos</h2>
           <p class="text-gray-600">Aquí puedes ver algunos de nuestros trabajos más destacados.</p>
         </div>
 
         <!-- Contenedor Grid de tarjetas -->
-        <div class="portfolio-grid grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-6 max-w-7xl mx-auto">
+        <div class="portfolio-grid grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-3 mx-auto">
 
           <!-- Tarjeta 1 -->
           <div class="bg-white rounded-lg shadow overflow-hidden portfolio-card group" data-images='[
