--- a/Paginas/crear_portafolio.html
+++ b/Paginas/crear_portafolio.html
@@ -1,54 +1,177 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nuevo Proyecto - Portafolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-  <div class="max-w-3xl mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-6 text-blue-900">Agregar Proyecto al Portafolio</h1>
+<!-- Encabezado -->
+<header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm">
+  <div class="flex justify-between items-center">
+    <h1 class="text-xl font-semibold text-gray-800">Agregar Proyecto al Portafolio</h1>
+    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
+      🏠 Inicio
+    </button>
+  </div>
+</header>
 
-    <form class="bg-white p-6 rounded-lg shadow space-y-4">
+<!-- Contenido principal -->
+<form id="crearProyectoForm" class="flex flex-col gap-6 items-stretch p-4 justify-evenly min-h-screen">
+  <!-- Cuerpo del formulario -->
+  <div class="flex flex-col md:flex-row gap-6 items-stretch">
+    <!-- Columna izquierda -->
+    <div class="w-full md:w-[35%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
+      <!-- Título -->
       <div>
-        <label class="block font-semibold">Título del Proyecto</label>
-        <input type="text" class="w-full border border-gray-300 p-2 rounded" placeholder="Ej: Remodelación Oficina">
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Título del Proyecto</label>
+        <input 
+          type="text" 
+          name="titulo" 
+          class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+          placeholder="Ej: Remodelación Oficina"
+          required
+        >
       </div>
 
-      <div>
-        <label class="block font-semibold">Descripción</label>
-        <textarea class="w-full border border-gray-300 p-2 rounded" rows="4"></textarea>
+      <!-- Descripción -->
+      <div class="flex-1 flex flex-col">
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Descripción</label>
+        <textarea
+          name="descripcion"
+          class="w-full px-2 py-1 min-h-[180px] border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e] resize-none"
+          placeholder="Descripción del proyecto..."
+          required
+        ></textarea>
       </div>
 
-      <div>
-        <label class="block font-semibold">Categoría</label>
-        <select class="w-full border border-gray-300 p-2 rounded">
-          <option>Obra Blanca</option>
-          <option>Obra Negra</option>
-          <option>Mantenimiento</option>
-        </select>
-      </div>
+  <div class="flex gap-x-6">
+  <!-- Categoría -->
+    <div class="w-1/2">
+      <label class="block font-medium text-gray-800 mb-1 text-lg">Categoría</label>
+      <select
+        name="categoria"
+        class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        required
+      >
+        <option value="">Seleccionar</option>
+        <option value="obra_blanca">Obra Blanca</option>
+        <option value="obra_negra">Obra Negra</option>
+        <option value="mantenimiento">Mantenimiento</option>
+      </select>
+    </div>
 
-      <div>
-        <label class="block font-semibold">Estado</label>
-        <select class="w-full border border-gray-300 p-2 rounded">
-          <option>Borrador</option>
-          <option>Publicado</option>
-        </select>
-      </div>
-
-      <div>
-        <label class="block font-semibold">Imagen Principal</label>
-        <input type="file" class="w-full border border-gray-300 p-2 rounded">
-      </div>
-
-      <div class="flex justify-end">
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-700">Guardar</button>
-      </div>
-    </form>
+    <!-- Estado -->
+    <div class="w-1/2">
+      <label class="block font-medium text-gray-800 mb-1 text-lg">Estado</label>
+      <select
+        name="estado"
+        class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"
+        required
+      >
+        <option value="borrador" selected>Borrador</option>
+        <option value="publicado">Publicado</option>
+      </select>
+    </div>
   </div>
 
+    </div>
+
+    <!-- Columna derecha -->
+    <div class="w-full md:w-[65%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
+      <!-- Imágenes -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Imágenes del Proyecto</label>
+        <input 
+          type="file" 
+          id="imagenesInput" 
+          name="imagenes" 
+          multiple 
+          accept="image/*"
+          class="w-full border-[1px] border-[#161a7e] px-2 py-1 rounded-lg bg-[#f0f4ff] text-gray-800"
+        >
+        <small class="text-gray-500 block mt-1">Puedes seleccionar varias imágenes (máximo 5).</small>
+        <p id="imageCount" class="text-sm text-blue-600 mt-1 hidden"></p>
+        <div id="previewContainer" class="mt-4 flex flex-wrap gap-3"></div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Botones centrados abajo -->
+    <div class="flex justify-center gap-6 pt-4">
+      <!-- Botón Cancelar como botón con redirección -->
+      <button type="button" onclick="window.location.href='portafolio.html'" class="w-40 px-6 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
+        Cancelar
+      </button>
+
+      <!-- Botón Guardar (envía el formulario) -->
+      <button type="submit" class="w-40 px-6 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457]">
+        Guardar
+      </button>
+    </div>
+
+</form>
+
+<!-- Scripts -->
+<script>
+  const imagenesInput = document.getElementById("imagenesInput");
+  const previewContainer = document.getElementById("previewContainer");
+  const imageCount = document.getElementById("imageCount");
+
+  imagenesInput.addEventListener("change", () => {
+    previewContainer.innerHTML = "";
+    const files = imagenesInput.files;
+
+    if (files.length > 0) {
+      imageCount.textContent = `Imágenes seleccionadas: ${files.length}`;
+      imageCount.classList.remove("hidden");
+    } else {
+      imageCount.classList.add("hidden");
+    }
+
+    if (files.length > 5) {
+      imageCount.textContent = "⚠️ Solo se permiten hasta 5 imágenes.";
+      imageCount.classList.add("text-red-600");
+    } else {
+      imageCount.classList.remove("text-red-600");
+    }
+
+    Array.from(files).slice(0, 5).forEach(file => {
+      if (!file.type.startsWith("image/")) return;
+
+      const reader = new FileReader();
+      reader.onload = e => {
+        const img = document.createElement("img");
+        img.src = e.target.result;
+        img.className = "w-32 h-24 object-cover rounded border";
+        previewContainer.appendChild(img);
+      };
+      reader.readAsDataURL(file);
+    });
+  });
+
+  document.getElementById("crearProyectoForm").addEventListener("submit", function(e) {
+    const files = imagenesInput.files;
+    if (files.length > 5) {
+      e.preventDefault();
+      alert("❌ Solo puedes subir hasta 5 imágenes.");
+      return;
+    }
+    e.preventDefault();
+    alert("✅ Proyecto creado correctamente (simulado).");
+    window.location.href = "portafolio.html";
+  });
+</script>
 </body>
 </html>
+
 
