--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -1,46 +1,187 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Editar Proyecto - Portafolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-gray-100 text-gray-800">
 
-  <div class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-2xl">
-    <h2 class="text-2xl font-bold text-gray-700 mb-6 text-center">Editar Proyecto</h2>
-    
-    <form class="space-y-5">
+<!-- Encabezado -->
+<header class="bg-transparent border-b-[3px] border-[#161a7e] py-4 px-6 shadow-sm">
+  <div class="flex justify-between items-center">
+    <h1 class="text-xl font-semibold text-gray-800">Modificar Proyecto Existente</h1>
+    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-500 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
+      🏠 Inicio
+    </button>
+  </div>
+</header>
+
+<!-- Contenido principal -->
+<form id="editForm" class="flex flex-col gap-6 items-stretch p-4 justify-evenly h-screen">
+  <!-- Cuerpo del formulario -->
+  <div class="flex flex-col md:flex-row gap-6 items-stretch">
+    <!-- Columna izquierda -->
+    <div class="w-full md:f-[35%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
+      <!-- Título -->
       <div>
-        <label class="block text-sm font-medium text-gray-600">Título</label>
-        <input type="text" value="Proyecto de Ejemplo" class="w-full px-4 py-2 mt-1 border rounded-xl focus:ring-2 focus:ring-green-600 focus:outline-none">
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Título del Proyecto</label>
+        <input type="text"
+               class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]"rgb(247 247 247 / 43%)
+               value="Proyecto de Ejemplo">
       </div>
 
-      <div>
-        <label class="block text-sm font-medium text-gray-600">Descripción</label>
-        <textarea class="w-full px-4 py-2 mt-1 border rounded-xl focus:ring-2 focus:ring-green-600 focus:outline-none" rows="4">Descripción del proyecto...</textarea>
-      </div>
+      <!-- Descripción -->
+    <div class="flex-1 flex flex-col">
+      <label class="block font-medium text-gray-800 mb-1 text-lg">Descripción</label>
+      <textarea
+        class="w-full px-2 py-1 min-h-[180px] border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e] resize-none"
+      >Descripción del proyecto...</textarea>
+    </div>
 
+      <!-- Estado -->
       <div>
-        <label class="block text-sm font-medium text-gray-600">Imagen</label>
-        <input type="file" class="w-full px-4 py-2 mt-1 border rounded-xl focus:ring-2 focus:ring-green-600 focus:outline-none">
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-600">Estado</label>
-        <select class="w-full px-4 py-2 mt-1 border rounded-xl focus:ring-2 focus:ring-green-600 focus:outline-none">
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Estado</label>
+        <select
+          class="w-full px-2 py-1 border-[1px] border-[#161a7e] rounded-lg bg-[#f7f7f76e] text-gray-800 focus:outline-none focus:ring-2 focus:ring-[#161a7e]">
           <option value="activo" selected>Activo</option>
           <option value="inactivo">Inactivo</option>
         </select>
       </div>
+    </div>
 
-      <div class="flex justify-between">
-        <a href="admin_portafolio.html" class="px-4 py-2 bg-gray-400 text-white rounded-xl hover:bg-gray-500">Cancelar</a>
-        <button type="submit" class="px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700">Actualizar</button>
+    <!-- Columna derecha -->
+    <div class="w-full md:w-[65%] flex flex-col border-[2px] border-[#161a7e] rounded-lg p-4 space-y-6 flex-1">
+      <!-- Imágenes actuales -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-2 text-lg">Imágenes Actuales</label>
+        <div id="currentImages"
+             class="flex flex-wrap gap-3">
+          <!-- Las imágenes se insertan aquí -->
+        </div>
       </div>
-    </form>
+
+      <!-- Nuevas imágenes -->
+      <div>
+        <label class="block font-medium text-gray-800 mb-1 text-lg">Agregar Nuevas Imágenes</label>
+        <input type="file" id="newImagesInput" multiple accept="image/*"
+               class="w-full border-[1px] border-[#161a7e] px-2 py-1 rounded-lg bg-[#f0f4ff] text-gray-800">
+        <small class="text-gray-500 block mt-1">Puedes seleccionar varias imágenes (máximo 5).</small>
+        <p id="imageCount" class="text-sm text-blue-600 mt-1 hidden"></p>
+        <div id="previewContainer"
+             class="mt-4 flex flex-wrap gap-3">
+          <!-- Preview de imágenes nuevas -->
+        </div>
+      </div>
+    </div>
   </div>
 
+  <div class="flex justify-center gap-6 pt-4">
+    <!-- Botón cancelar como botón visual pero con redirección -->
+    <button type="button" onclick="window.location.href='portafolio.html'" class="w-40 px-6 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
+      Cancelar
+    </button>
+
+    <!-- Botón enviar -->
+    <button type="submit" class="w-40 px-6 py-2 bg-[#161a7e] text-white rounded-lg hover:bg-[#0f1457]">
+      Actualizar
+    </button>
+  </div>
+
+</form>
+
+
+  <!-- Scripts -->
+  <script>
+    // Imágenes actuales (simuladas desde backend)
+    const imagenesActuales = [
+      "https://picsum.photos/id/1011/200/150",
+      "https://picsum.photos/id/1012/200/150",
+      "https://picsum.photos/id/1013/200/150"
+    ];
+    const currentImagesContainer = document.getElementById("currentImages");
+
+    imagenesActuales.forEach((src, index) => {
+      const wrapper = document.createElement("div");
+      wrapper.className = "relative group";
+
+      const img = document.createElement("img");
+      img.src = src;
+      img.alt = `Imagen ${index + 1}`;
+      img.className = "w-32 h-24 object-cover rounded border";
+
+      const deleteBtn = document.createElement("button");
+      deleteBtn.type = "button";
+      deleteBtn.innerHTML = "✕";
+      deleteBtn.className = "absolute top-0 right-0 bg-red-600 text-white rounded-full w-6 h-6 text-xs flex items-center justify-center opacity-0 group-hover:opacity-100 transition";
+      deleteBtn.title = "Eliminar imagen";
+
+      deleteBtn.addEventListener("click", () => {
+        wrapper.remove();
+      });
+
+      wrapper.appendChild(img);
+      wrapper.appendChild(deleteBtn);
+      currentImagesContainer.appendChild(wrapper);
+    });
+
+    // Previsualización nuevas imágenes
+    const newImagesInput = document.getElementById("newImagesInput");
+    const previewContainer = document.getElementById("previewContainer");
+    const imageCount = document.getElementById("imageCount");
+
+    newImagesInput.addEventListener("change", () => {
+      previewContainer.innerHTML = "";
+      const files = newImagesInput.files;
+
+      if (files.length > 0) {
+        imageCount.textContent = `Imágenes seleccionadas: ${files.length}`;
+        imageCount.classList.remove("hidden");
+      } else {
+        imageCount.classList.add("hidden");
+      }
+
+      if (files.length > 5) {
+        imageCount.textContent = "⚠️ Solo se permiten hasta 5 imágenes.";
+        imageCount.classList.add("text-red-600");
+      } else {
+        imageCount.classList.remove("text-red-600");
+      }
+
+      Array.from(files).slice(0, 5).forEach(file => {
+        const reader = new FileReader();
+        reader.onload = e => {
+          const img = document.createElement("img");
+          img.src = e.target.result;
+          img.className = "w-32 h-24 object-cover rounded border";
+          previewContainer.appendChild(img);
+        };
+        reader.readAsDataURL(file);
+      });
+    });
+
+    // Validación al enviar el formulario
+    document.getElementById("editForm").addEventListener("submit", function (e) {
+      const files = newImagesInput.files;
+
+      if (files.length > 5) {
+        e.preventDefault();
+        alert("❌ Solo puedes subir hasta 5 imágenes.");
+        return;
+      }
+
+      e.preventDefault();
+      alert("✅ Proyecto actualizado correctamente (simulado).");
+      window.location.href = "portafolio.html";
+    });
+  </script>
 </body>
 </html>
